# hark

./: .env.example  .gitignore  index.html  package-lock.json  package.json  readme.md  tailwind.config.js  vite.config.js
server/: package-lock.json  package.json  server.js
src/: App.jsx  index.css  index.html  main.js  style.css
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/src/: main.rs  native_integrations.rs
src/components/: ChatSection.jsx  NoteCard.jsx  NotesSection.jsx  PendingSection.jsx  PeopleSection.jsx  SearchSection.jsx  Sidebar.jsx  TopicsSection.jsx
src/hooks/: useData.js  useRecording.js
